swagger: createUser
